--- a/W3練習.ipynb
+++ b/W3練習.ipynb
@@ -95,13 +95,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "d8ead8e1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['刑事訴訟法', '中華民國刑法']\n",
+      "[['第159條之4', '第159條之5', '第159條之1', '第267條', '第299條第1項', '第302條第1款'], ['第11條', '第38條第1項第1款', '第42條第3項', '第55條', '第56條', '第57條', '第59條']]\n",
+      "第267條\n",
+      "{'刑事訴訟法': ['第159條之4', '第159條之5', '第159條之1', '第267條', '第299條第1項', '第302條第1款'], '中華民國刑法': ['第11條', '第38條第1項第1款', '第42條第3項', '第55條', '第56條', '第57條', '第59條', '第62條']}\n"
+     ]
+    }
+   ],
    "source": [
-    "#練習 4\n"
+    "#練習 4\n",
+    "d={\"刑事訴訟法\":[\"第159條之4\",\"第159條之5\",\"第159條之1\",\"第267條\",\"第299條第1項\",\"第302條第1款\"],\n",
+    "   \"中華民國刑法\":[\"第11條\",\"第38條第1項第1款\",\"第42條第3項\",\"第55條\",\"第56條\",\"第57條\",\"第59條\"]}\n",
+    "\n",
+    "\n",
+    "s1=list(d.keys())\n",
+    "print(s1)\n",
+    "s2=list(d.values())\n",
+    "print(s2)\n",
+    "\n",
+    "\n",
+    "print(d[\"刑事訴訟法\"][3])\n",
+    "\n",
+    "d[\"中華民國刑法\"].append(\"第62條\")\n",
+    "print(d)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1fc24df1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
